--- a/chef/cookbooks/webserver_test/.kitchen.yml
+++ b/chef/cookbooks/webserver_test/.kitchen.yml
@@ -2,9 +2,9 @@
 driver:
   name: vagrant
 
-driver_config:
-  network:
-  - ["forwarded_port", {guest: 80, host: 80}]
+# driver_config:
+#   network:
+#   - ["forwarded_port", {guest: 80, host: 80}]
 
 provisioner:
   name: chef_zero
@@ -17,7 +17,7 @@ verifier:
   name: inspec
 
 platforms:
-  #- name: ubuntu-16.04
+  - name: ubuntu-14.04
   - name: centos-7
 
 suites:
